lang/checker/tests/cases/pass/resolve-type-match/tables/mixed.slt
type A = {
	[string]: number,
}
local hi: A = {
	["yes"] = 1,
	["a"] = 2,
}