lang/checker/tests/cases/fail/solve-type-ref/missing_argument.slt
type T<A: string, B: number> = B;
type B = T<string>;